fixed spacing on producst page

--- a/app/_components/products/Products.module.css
+++ b/app/_components/products/Products.module.css
@@ -4,7 +4,7 @@
 }
 
 .productsIncreasedTop {
-  padding: 12rem 0;
+  padding: 12rem 0 8rem;
 }
 
 .smallPadding {
